# safety-invariance

./: .gitignore  README.md  pyproject.toml
configs/: data_collection_matrix_24gb.json  data_collection_matrix_full_models.json  data_collection_matrix_mock.json  data_collection_matrix_rigorous_paper.json  external_agentdojo_remaining_suites_extension_48gb.json  external_confirmation_matrix_24gb.json  external_native_smoke_24gb.json  external_noise_floor_qwen25_3b_24gb.json  external_qwen25_3b_int8_subset_24gb.json  gpu_smoke_matrix_24gb.json  judge_models_open_guard.json  llama31_8b_nf4_selective_b20_replication_24gb.json  mitigation_matrix_mock.json  mock_fp16.json  mock_nf4_4bit.json  qwen25_3b_nf4_4bit.json  qwen25_7b_fp16.json  qwen25_7b_int8.json  qwen25_7b_nf4_4bit.json  qwen3b_int8_selective_b20_replication_24gb.json  qwen3b_int8_selective_smoke_24gb.json  qwen3b_nf4_selective_precision_expanded_study_24gb.json  qwen3b_nf4_selective_precision_study_24gb.json  qwen3b_quant_mitigation_matrix_24gb.json  qwen3b_signal_replication_matrix_24gb.json  qwen3b_stochastic_robustness_matrix_24gb.json
docs/: COMPUTE_COLLABORATION_ONE_PAGER.md  CONFIRMATORY_PROTOCOL.md  DATA_COLLECTION.md  PROTOCOL_AMENDMENT_2026-06-21.md  RESEARCH_POSITIONING.md  UNIVERSITY_LAB_OUTREACH_EMAIL.md
reports/: agentdojo_qwen25_3b_paired_flips.json  agentdojo_qwen25_3b_paired_flips.md  collection_24gb.md  collection_24gb_diagnostics.md  collection_24gb_diagnostics_v2.md  collection_rigorous_paper_diagnostics.md  collection_rigorous_paper_rescored.md  gpu_smoke_24gb.md  llama31_8b_nf4_b20_diagnostics.md  llama31_8b_nf4_mechanistic_calibration.json  llama31_8b_nf4_selective_b20_evaluation_24gb.json  llama31_8b_nf4_selective_b20_evaluation_24gb.md  native_external_qwen25_3b_full_agentdojo_summary.json  native_external_qwen25_3b_full_agentdojo_summary.md  qwen25_3b_agentdojo_noise_floor.json  qwen25_3b_agentdojo_noise_floor.md  qwen25_3b_int8_subset_paired_flips.json  qwen25_3b_int8_subset_paired_flips.md  qwen3b_int8_b20_diagnostics.md  qwen3b_int8_mechanistic_calibration.json  qwen3b_int8_selective_b20_evaluation_24gb.json  (+22 more)
(+6261 files in other folders)
